[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "twitter_archive"
version = "0.0.1"
authors = [
    { name = "Tim", email = "author@example.com" },
]
description = "Convert a Twitter export to a full, stand-alone set of files."
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

dependencies = [
    "requests==2.28.1",
]

[project.urls]
"Homepage" = "https://github.com/mikeckennedy/twitter-archive-parser"


[project.scripts]
twitter_archive_markdown = "twitter_archive:parse_export"
twitter_archive_images = "twitter_archive:download_images"
